--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "A comprehensive guide and example of how child processes work in Node.js and Linux. This project demonstrates the use of child processes for parallel processing and inter-process communication.",
   "main": "main.js",
   "scripts": {
-    "start": "node main.js"
+    "start": "node main.js",
+    "start:index": "node src/index.js",
+    "dev": "node --watch --no-warnings src/index.js",
+    "seed": "node src/seed.js"
   },
   "keywords": [
     "nodejs",
@@ -18,13 +21,23 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/yourusername/how-nodejs-child-process-works.git"
+    "url": "https://github.com/alexandreafj/how-nodejs-child-process-works.git"
   },
   "bugs": {
-    "url": "https://github.com/yourusername/how-nodejs-child-process-works/issues"
+    "url": "https://github.com/alexandreafj/how-nodejs-child-process-works/issues"
   },
-  "homepage": "https://github.com/yourusername/how-nodejs-child-process-works#readme",
+  "homepage": "https://github.com/alexandreafj/how-nodejs-child-process-works#readme",
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=20.12.1"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^8.4.1"
+  },
+  "dependencies": {
+    "cli-progress": "^3.12.0",
+    "draftlog": "^1.0.13",
+    "mongodb": "^6.8.0",
+    "pg": "^8.12.0",
+    "sqlite3": "^5.1.7"
   }
 }
